--- a/ContactUs.html
+++ b/ContactUs.html
@@ -197,7 +197,7 @@ nav ul li a:hover {
 <body>
     <header class="navbar">
         <div class="logo">
-            <a href="#">InnovateTech</a>
+            <a href="index.html">InnovateTech</a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
@@ -207,7 +207,7 @@ nav ul li a:hover {
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="AboutUs1.html">About Us</a></li>
-                <li><a href="signup.html" class="sign-up">Sign Up</a></li>
+                <li><a href="form.html" class="sign-up">Sign Up</a></li>
             </ul>
         </nav>
         <div class="menu-toggle">
