--- a/signup.html
+++ b/signup.html
@@ -200,7 +200,7 @@ nav ul li a:hover {
 <body>
     <header class="navbar">
         <div class="logo">
-            <a href="#">InnovateTech</a>
+            <a href="index.html">InnovateTech</a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
