--- a/ContactUs.html
+++ b/ContactUs.html
@@ -207,7 +207,7 @@ nav ul li a:hover {
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="AboutUs1.html">About Us</a></li>
-                <li><a href="form.html" class="sign-up">Sign Up</a></li>
+                <li><a href="signup.html" class="sign-up">Sign Up</a></li>
             </ul>
         </nav>
         <div class="menu-toggle">
