--- a/ContactUs.html
+++ b/ContactUs.html
@@ -3,24 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - InnovateTech</title>
-    <link rel="stylesheet" href="styles.css">
-    <style type="text/css">
+    <title>InnovateTech - About Us</title>
+    <style>
         body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
+#navbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: #333;
+            padding: 10px 20px;
+            color: white;
+            flex-wrap: wrap;
+        }
 
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #2c3e50;
-    padding: 10px 20px;
-    color: white;
-    flex-wrap: wrap;
-}
+        #logo a {
+            color: white;
+            text-decoration: none;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        #search-bar {
+            display: flex;
+            flex-grow: 1;
+            max-width: 600px;
+            margin: 0 20px;
+        }
+
+        #search-bar input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px 0 0 4px;
+            outline: none;
+        }
+
+        #search-bar button {
+            padding: 10px;
+            border: none;
+            border-radius: 0 4px 4px 0;
+            background-color: #ff9800;
+            color: white;
+            cursor: pointer;
+        }
+
+        #search-bar button:hover {
+            background-color: #e68900;
+        }
+
+        nav ul {
+            list-style-type: none;
+            display: flex;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            margin: 0 10px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        nav ul li a:hover {
+            background-color: #555;
+        }
+
+        #sign-up {
+            background-color: #ff9800;
+            color: white;
+            padding: 8px 16px;
+        }
+
+        #sign-up:hover {
+            background-color: #e68900;
+        }
+
+        #menu-toggle {
+            display: none;
+            cursor: pointer;
+        }
+
+        #menu-toggle span {
+            font-size: 28px;
+            color: white;
+        }
+
+        @media (max-width: 768px) {
+            #search-bar {
+                flex-grow: 0;
+                width: 100%;
+                margin: 10px 0;
+            }
+
+            nav ul {
+                flex-direction: column;
+                width: 100%;
+                display: none;
+            }
+
+            nav ul.show {
+                display: flex;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+                text-align: center;
+            }
+
+            #menu-toggle {
+                display: block;
+            }
+        }
 
 .logo a {
     color: white;
@@ -133,7 +236,7 @@ nav ul li a:hover {
 }
 
 .hero {
-    background: linear-gradient(135deg, #1abc9c, #16a085);
+    background: linear-gradient(135deg, #ff9800, #ff9800);
     color: white;
     padding: 50px 20px;
 }
@@ -182,39 +285,38 @@ nav ul li a:hover {
 .pitch-form button {
     padding: 10px;
     border: none;
-    background-color: #1abc9c;
+    background-color: #ff9800;
     color: white;
     cursor: pointer;
     border-radius: 4px;
 }
 
 .pitch-form button:hover {
-    background-color: #16a085;
+    background-color:#1abc9c;
 }
-
     </style>
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">
+    <header id="navbar">
+        <div id="logo">
             <a href="index.html">InnovateTech</a>
         </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <button type="submit">Search</button>
+        <div id="search-bar">
+            <input type="text" id="search-input" placeholder="Search...">
+            <button type="button" id="search-button">Search</button>
         </div>
+
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="AboutUs1.html">About Us</a></li>
-                <li><a href="signup.html" class="sign-up">Sign Up</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
-        <div class="menu-toggle">
+        <div id="menu-toggle">
             <span>&#9776;</span>
         </div>
     </header>
-
     <main class="contact-content">
         <section class="hero">
             <h1>Let's have a talk</h1>
@@ -247,9 +349,8 @@ nav ul li a:hover {
             </div>
         </section>
     </main>
-
     <script>
-       document.getElementById('search-button').addEventListener('click', function() {
+            document.getElementById('search-button').addEventListener('click', function() {
             let query = document.getElementById('search-input').value.toLowerCase();
             let productRows = document.querySelectorAll('#product-table tbody tr');
             
